Implementando e adicionando rotas
